fixed gap between social buttons

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -35,5 +35,5 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 1em;
+  gap: 10px;
 }
